--- a/projet2.html
+++ b/projet2.html
@@ -23,12 +23,13 @@
         <section>
             <article class="projet">
                 <h2>Projet 2 - Installation d'un poste de travail.</h2>
-                <p>La SAE Installation d'un poste de travail a demandé des competences dans l'utilisation de la console et donc de commande
-                    linux. Il a fallu faire de nombreuses manipulation dans le parametrage pas extremement complexe mais cela reste un 
-                    exercice fastidieu. puisque en cas d'erreur il faut parfois tout recommencer donc il est important d'être rigoureux.
-                    De plus après avoir compris comment l'installer le travail consistait a vulgariser ce travail. Nous avons donc du
-                    reprendre toute les etapes et les integrer dans une carte mental permettant a des personne n'etant pas a l'aise avec
-                    l'informatique de le faire.
+                <p>a SAE Installation d'un poste de travail a demandé des compétences dans l'utilisation de la console et donc de commandes Linux.
+                     Il a fallu effectuer de nombreuses manipulations dans le paramétrage, 
+                    qui n'étaient pas extrêmement complexes mais restaient fastidieuses. En cas d'erreur,
+                     il était parfois nécessaire de tout recommencer, il était donc important d'être rigoureux.
+                    De plus, une fois l'installation comprise, le travail consistait à vulgariser cette procédure.
+                     Nous avons donc dû reprendre toutes les étapes et les intégrer dans une carte mentale permettant
+                      à des personnes peu à l'aise avec l'informatique de les réaliser.
                 </p>
                 <h3>Technologies utilisées :</h3>
                 <ul>
